Fix modal card having extra padding

--- a/src/css/components/Card.scss
+++ b/src/css/components/Card.scss
@@ -315,3 +315,7 @@
 	margin-right: 0.5rem;
 	opacity: 0.7;
 }
+	
+.modal .card {
+	padding: 0;
+}
